--- a/crossdaemonize-tests/Cargo.toml
+++ b/crossdaemonize-tests/Cargo.toml
@@ -1,22 +1,19 @@
 [package]
-name = "daemonize-tests"
-version = "0.5.0"
-license = "MIT/Apache-2.0"
-authors = ["Fedor Gogolev <knsd@knsd.net>"]
-repository = "https://github.com/knsd/daemonize"
-documentation = "https://docs.rs/daemonize"
-readme = "README.md"
-description = "Library to enable your code run as a daemon process on Unix-like systems."
-keywords = ["daemon", "daemonize", "unix"]
-categories = ["os::unix-apis"]
-
+name = "crossdaemonize-tests"
+version = "0.1.0"
+edition = "2021"
 publish = false
+description = "Test suite for crossdaemonize"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
-libc = "0.2.98"
-arraystring = "0.3.0"
-daemonize = { path = "../daemonize" }
+bincode = "1.3"
+serde = { version = "1.0", features = ["derive"] }
+crossdaemonize = { path = "../crossdaemonize" }
 os_pipe = "0.9.2"
+libc = { version = "0.2.98", optional = true }
+tempfile = "3.20.0"
 
 [dev-dependencies]
-tempfile = "3.2.0"
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.98"
