--- a/crossdaemonize-tests/Cargo.toml
+++ b/crossdaemonize-tests/Cargo.toml
@@ -15,6 +15,7 @@ crossdaemonize = { path = "../crossdaemonize" }
 os_pipe = "0.9.2"
 libc = { version = "0.2.98", optional = true }
 tempfile = "3.20.0"
+chrono = "0.4"
 
 [dev-dependencies]
 [target.'cfg(unix)'.dependencies]
